# ttdb

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README-dev  README.md  bootstrap.conf  configure.ac
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  it.po  ttdb.pot
src/: Makefile.am  ttdbcli.c
